reverted back to preventing default on touch which disables scrolling for cleaner and more responsive interaction, but made the gaps between the boxes larger for easier scrolling capabilities

--- a/widget-from-scratch/intelliswipe-demo.css
+++ b/widget-from-scratch/intelliswipe-demo.css
@@ -21,7 +21,5 @@ li {
     background-color: white;    
     border: solid 1px;
     border-color: gray;
-    margin-top: 10px;
-    margin-bottom: 10px;
-
+    margin-top: 30px;
 }
